@@ -2,7 +2,7 @@ New Features and Important Changes in GammaLib 1.3.0
 
 Author(s) : Juergen Knoedlseder
 
-17 March 2017
+18 March 2017
 
 
 1. Introduction
@@ -25,6 +25,7 @@ The following classes have been renamed:
 
 The following methods have been added:
 - GCTAResponseIrf::rspname
+- GCTARoi::contains
 
 The following methods have been removed:
 - ...
@@ -279,6 +280,9 @@ of the response function (attribute m_rspname).
 Do no longer interpret a CTA calibration database as a file path in the
 GCTAResponseIrf::read() method (#1969).
 >>>>>>> Do no longer interpret a CTA calibration database as file path in GCTAResponseIrf::read (#1969)
+
+Add GCTARoi::contains() method that checks whether an instrument direction
+is contained within the region of interest.
 
 
 21. COMPTEL interface
