@@ -1,8 +1,10 @@
-2017-03-17
+2017-03-18
 
         * Version 1.3.0 released
         =========================
 
+        Add GCTARoi::contains method
+        Do no longer interpret a CTA calibration database as file path (#1969)
         Add GCTAResponseIrf::rspname() method
         Do no longer interpret a CTA calibration database as file path (#1969)
         GWcs now supports CD keywords instead of CDELT (#1951)
